name: version
author: Ulf Norell <ulf.norell@gmail.com>
maintainer: Ulf Norell <ulf.norell@gmail.com>
version: 2.0
category: utility
license: MIT
license-file: LICENSE
cabal-version: >= 1.10
build-type: Simple
synopsis: A utility program for managing different versions of programs.
description:
  A utility program for managing different versions of programs that works by
  managing a set of symlinks for each program/package.
tested-with: GHC == 8.4.3

source-repository head
  type: git
  location: https://github.com/UlfNorell/version.git

executable version
  hs-source-dirs: .
  main-is: Main.hs
  build-depends:
    base      >= 0.10,
    directory >= 1.3,
    filepath  >= 1.4,
    unix      >= 2.7
  other-modules:
    ParseBundle
    Version
  default-language: Haskell2010
  default-extensions:
    TupleSections,
    PatternGuards,
    ImplicitParams

